@@ -7,12 +7,15 @@ Additionally, barny's CC Tracker allows you to set a keybind to manually reset t
 
 You can easily access the options menu using the [b]/bcc[/b] slash command. If you encounter any bugs or have feature requests, you can submit them via the [url=https://www.esoui.com/portal.php?id=386&a=listbugs]Bug Report page[/url] or the [url=https://www.esoui.com/portal.php?id=386&a=listfeatures]Feature Request page[/url]. For those interested in testing new features, beta versions are available on [url=https://github.com/barny22/barnysCCTracker/tree/development]GitHub[/url], with the latest beta available for [url=https://github.com/barny22/barnysCCTracker/archive/refs/heads/development.zip]direct download here[/url].
 
+[b]Dependencies: [color=red]LibAddonMenu-2.0[/color][/b]
+[b]Optional dependency: [color=yellow]LibChatMessage[/color][/b] for debugging.
+
 [b]TL;DR:[/b]
 [list]
-[*]Tracks crowd control (CC) effects like stuns, snares, and roots in real-time.
-[*]Automatically updates when a CC ends.
-[*]Includes a keybind option to reset the UI if necessary.
-[*]Access options with [b]/bcc[/b].
-[*][url=https://www.esoui.com/portal.php?id=386&a=listbugs]Report bugs[/url] and [url=https://www.esoui.com/portal.php?id=386&a=listfeatures]request features[/url] via the ESOUI portal.
-[*][url=https://github.com/barny22/barnysCCTracker/tree/development]Beta versions[/url] and the [url=https://github.com/barny22/barnysCCTracker/archive/refs/heads/development.zip]latest beta[/url] available on GitHub.
+[*] Tracks crowd control (CC) effects like stuns, snares, and roots in real-time.
+[*] Automatically updates when a CC ends.
+[*] Includes a keybind option to reset the UI if necessary.
+[*] Access options with [b]/bcc[/b].
+[*] [url=https://www.esoui.com/portal.php?id=386&a=listbugs]Report bugs[/url] and [url=https://www.esoui.com/portal.php?id=386&a=listfeatures]request features[/url] via the ESOUI portal.
+[*] [url=https://github.com/barny22/barnysCCTracker/tree/development]Beta versions[/url] and the [url=https://github.com/barny22/barnysCCTracker/archive/refs/heads/development.zip]latest Beta[/url] available on GitHub.
 [/list]
